<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    tools:showIn="navigation_view">

    <group android:checkableBehavior="single">
        <item
            android:id="@+id/Jugar"
            android:icon="@drawable/ic_menu_camera"
            android:title="@string/jugar" />
        <item
            android:id="@+id/editar"
            android:icon="@drawable/ic_menu_gallery"
            android:title="@string/editar_perfil" />
    </group>

    <group
        android:id="@+id/group1"
        android:checkableBehavior="single">
        <item
            android:id="@+id/nav_manage"
            android:icon="@drawable/ic_menu_manage"
            android:title="@string/reservar" />
    </group>

    <item android:title="@string/menu_group">
        <menu>
            <group android:checkableBehavior="single">
                <item
                    android:id="@+id/nav_contactar"
                    android:icon="@drawable/ic_menu_share"
                    android:title="@string/contactanos" />

                <item
                    android:id="@+id/nav_map"
                    android:icon="@drawable/ic_menu_map"
                    android:title="@string/donde_estamos" />
            </group>
        </menu>
    </item>

</menu>
