<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="#6BFCD4B2"
    tools:context=".MainActivity">

    <TextView
        android:id="@+id/textView"
        android:layout_width="360dp"
        android:layout_height="40dp"
        android:layout_marginTop="15dp"
        android:background="#DCE9AA74"
        android:gravity="center_horizontal|center_vertical"
        android:paddingLeft="15dp"
        android:paddingTop="3dp"
        android:paddingRight="15dp"
        android:paddingBottom="3dp"
        android:text="@string/detallesregistrarse"
        android:textAppearance="@style/TextAppearance.AppCompat.Medium"
        android:textStyle="italic"
        android:visibility="visible"
        app:autoSizeTextType="none"
        app:fontFamily="serif"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        tools:visibility="visible" />

    <View
        android:id="@+id/view"
        android:layout_width="match_parent"
        android:layout_height="1dp"
        android:layout_marginTop="20dp"
        android:background="#000000"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/textView" />

    <EditText
        android:id="@+id/nombre"
        android:layout_width="150dp"
        android:layout_height="47dp"
        android:layout_marginStart="15dp"
        android:layout_marginTop="18dp"
        android:layout_marginEnd="15dp"
        android:layout_marginBottom="20dp"
        android:autofillHints=""
        android:backgroundTint="@color/loginButtonBG"
        android:ems="10"
        android:hint="@string/nombre"
        android:inputType="textPersonName"
        android:textColor="#000000"
        android:textColorHighlight="#4FFFFFFF"
        android:textCursorDrawable="@color/loginButtonBG"
        app:layout_constraintBottom_toTopOf="@+id/emailText"
        app:layout_constraintEnd_toStartOf="@+id/apellidos"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/view"
        tools:targetApi="o" />

    <EditText
        android:id="@+id/apellidos"
        android:layout_width="150dp"
        android:layout_height="47dp"
        android:layout_marginStart="15dp"
        android:layout_marginTop="18dp"
        android:layout_marginEnd="15dp"
        android:layout_marginBottom="40dp"
        android:backgroundTint="@color/loginButtonBG"
        android:ems="10"
        android:hint="@string/apellidos"
        android:importantForAutofill="no"
        android:inputType="textPersonName"
        android:textColor="#000000"
        android:textColorHighlight="#4FFFFFFF"
        android:textCursorDrawable="@color/loginButtonBG"
        app:layout_constraintBottom_toTopOf="@+id/emailText"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.542"
        app:layout_constraintStart_toEndOf="@+id/nombre"
        app:layout_constraintTop_toBottomOf="@+id/view"
        tools:targetApi="lollipop" />

    <EditText
        android:id="@+id/emailText"
        android:layout_width="330dp"
        android:layout_height="47dp"
        android:layout_marginStart="15dp"
        android:layout_marginTop="20dp"
        android:layout_marginEnd="15dp"
        android:layout_marginBottom="10dp"
        android:backgroundTint="@color/loginButtonBG"
        android:ems="10"
        android:hint="@string/email"
        android:importantForAutofill="no"
        android:inputType="textEmailAddress"
        android:textColor="#000000"
        android:textColorHighlight="#4FFFFFFF"
        android:textCursorDrawable="@color/loginButtonBG"
        app:layout_constraintBottom_toTopOf="@+id/genderGroup"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/nombre"
        tools:targetApi="lollipop" />

    <RadioGroup
        android:id="@+id/genderGroup"
        android:layout_width="228dp"
        android:layout_height="32dp"
        android:layout_marginStart="65dp"
        android:layout_marginTop="10dp"
        android:layout_marginEnd="65dp"
        android:orientation="horizontal"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/emailText">

        <RadioButton
            android:id="@+id/radioMaleButton"
            android:layout_width="92dp"
            android:layout_height="40dp"
            android:buttonTint="@color/loginButtonBG"
            android:checked="true"
            android:text="@string/hombre"
            tools:targetApi="lollipop" />

        <RadioButton
            android:id="@+id/radioFemaleButton"
            android:layout_width="147dp"
            android:layout_height="40dp"
            android:buttonTint="@color/loginButtonBG"
            android:text="@string/mujer"
            tools:targetApi="lollipop" />

    </RadioGroup>

    <EditText
        android:id="@+id/fecha_nacimiento"
        android:layout_width="160dp"
        android:layout_height="47dp"
        android:layout_marginStart="15dp"
        android:layout_marginTop="20dp"
        android:layout_marginEnd="128dp"
        android:layout_marginBottom="15dp"
        android:autofillHints=""
        android:backgroundTint="@color/loginButtonBG"
        android:ems="10"
        android:hint="@string/fechanacimiento"
        android:inputType="date"
        android:textColor="#000000"
        android:textColorHighlight="#4FFFFFFF"
        android:textCursorDrawable="@color/loginButtonBG"
        app:layout_constraintBottom_toTopOf="@+id/direccion_text"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/genderGroup"
        tools:targetApi="o" />

    <Button
        android:id="@+id/select_date"
        android:layout_width="wrap_content"
        android:layout_height="47dp"
        android:layout_marginTop="15dp"
        android:text="@string/elegirFecha"
        app:layout_constraintStart_toEndOf="@+id/fecha_nacimiento"
        app:layout_constraintTop_toBottomOf="@+id/genderGroup" />

    <EditText
        android:id="@+id/direccion_text"
        android:layout_width="315dp"
        android:layout_height="38dp"
        android:layout_marginStart="15dp"
        android:layout_marginTop="15dp"
        android:layout_marginEnd="15dp"
        android:layout_marginBottom="14dp"
        android:backgroundTint="@color/loginButtonBG"
        android:ems="10"
        android:hint="@string/direccion"
        android:importantForAutofill="no"
        android:inputType="textPassword"
        android:textColor="#000000"
        android:textColorHighlight="#4FFFFFFF"
        android:textCursorDrawable="@color/loginButtonBG"
        app:layout_constraintBottom_toTopOf="@+id/telefono_text"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/fecha_nacimiento"
        tools:targetApi="lollipop" />

    <EditText
        android:id="@+id/telefono_text"
        android:layout_width="315dp"
        android:layout_height="40dp"
        android:layout_marginStart="15dp"
        android:layout_marginTop="76dp"
        android:layout_marginEnd="15dp"
        android:layout_marginBottom="9dp"
        android:backgroundTint="@color/loginButtonBG"
        android:ems="10"
        android:hint="@string/telefono"
        android:importantForAutofill="no"
        android:inputType="textPassword"
        android:textColor="#000000"
        android:textColorHighlight="#4FFFFFFF"
        android:textCursorDrawable="@color/loginButtonBG"
        app:layout_constraintBottom_toTopOf="@+id/password_Text"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.49"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/fecha_nacimiento"
        tools:targetApi="lollipop" />

    <EditText
        android:id="@+id/password_Text"
        android:layout_width="318dp"
        android:layout_height="37dp"
        android:layout_marginStart="15dp"
        android:layout_marginTop="132dp"
        android:layout_marginEnd="15dp"
        android:layout_marginBottom="15dp"
        android:backgroundTint="@color/loginButtonBG"
        android:ems="10"
        android:hint="@string/introducecontraseña"
        android:importantForAutofill="no"
        android:inputType="textPassword"
        android:textColor="#000000"
        android:textColorHighlight="#4FFFFFFF"
        android:textCursorDrawable="@color/loginButtonBG"
        app:layout_constraintBottom_toTopOf="@+id/dni_text"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.49"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/fecha_nacimiento"
        tools:targetApi="lollipop" />

    <EditText
        android:id="@+id/dni_text"
        android:layout_width="318dp"
        android:layout_height="37dp"
        android:layout_marginStart="15dp"
        android:layout_marginTop="184dp"
        android:layout_marginEnd="15dp"
        android:layout_marginBottom="1dp"
        android:backgroundTint="@color/loginButtonBG"
        android:ems="10"
        android:hint="@string/introducecontraseña"
        android:importantForAutofill="no"
        android:inputType="textPassword"
        android:textColor="#000000"
        android:textColorHighlight="#4FFFFFFF"
        android:textCursorDrawable="@color/loginButtonBG"
        app:layout_constraintBottom_toTopOf="@+id/policy"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.539"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/fecha_nacimiento"
        tools:targetApi="lollipop" />

    <CheckBox
        android:id="@+id/policy"
        android:layout_width="200dp"
        android:layout_height="30dp"
        android:layout_marginStart="67dp"
        android:layout_marginTop="204dp"
        android:layout_marginEnd="144dp"
        android:layout_marginBottom="30dp"
        android:buttonTint="@color/loginButtonBG"
        android:text="@string/terminosuso"
        app:layout_constraintBottom_toTopOf="@+id/signUpButtonId"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/direccion_text"
        app:layout_constraintVertical_bias="0.836"
        tools:targetApi="lollipop" />

    <Button
        android:id="@+id/signUpButtonId"
        android:layout_width="100dp"
        android:layout_height="40dp"
        android:layout_marginTop="104dp"
        android:layout_marginBottom="9dp"
        android:background="#FF8E01"
        android:text="@string/registrarse"
        android:textColor="#FFFFFF"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.498"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/password_Text" />

</androidx.constraintlayout.widget.ConstraintLayout>